display the cols as cells to stop content wrapping

--- a/assets/stylesheets/mobile/join.scss
+++ b/assets/stylesheets/mobile/join.scss
@@ -48,10 +48,8 @@ $bg_url: url('https://choice.community/uploads/default/original/2X/d/d9d0c620624
       padding-top: $margin_left;
       padding-bottom: 6px;
       border-bottom: $border_size/2 $background_color solid;
-      font-family: Lato;
       font-size: 15px;
       line-height: 1.47;
-      color: #000000;
       .topic-avatar {
         text-align: center;
         .content {
